Specify UTF-8 encoding for file operations